# valaam_task

./: .gitmodules  Application.cpp  Application.h  ArgumentsManager.cpp  ArgumentsManager.h  CMakeLists.txt  Consumer.cpp  Consumer.h  FixedQueue.cpp  FixedQueue.h  HashGen.cpp  HashGen.h  Producer.cpp  Producer.h  README.md  Unit.cpp  Unit.h  application.cpp  application.h  arguments_manager.cpp  arguments_manager.h  color.cpp  color.h  condit_vars.h  consumer.cpp  consumer.h  error_codes.h  fixed_queue.h  hash_generator.cpp  hash_generator.h  main.cpp  producer.cpp  producer.h  test_mode.h  unit.h
src/: arguments_manager.cpp  arguments_manager.h  consumer.cpp  error_codes.h  fixed_queue.h  hash_generator.cpp  main.cpp  producer.h  unit.cpp  unit.h
test/: CMakeLists.txt  test_smth.cpp
tst/: CMakeLists.txt  application_test.cpp  arguments_manager_test.cpp  main.cpp  unit_test.cpp
